@@ -24,7 +24,7 @@ Locks held: none
    at 0x........: main (hg03_inherit.c:60)
 
 Location 0x........ is 0 bytes inside shared[1],
-declared at hg03_inherit.c:11, in frame #x of thread x
+a global variable declared at hg03_inherit.c:11
 
 
 ERROR SUMMARY: 1 errors from 1 contexts (suppressed: 0 from 0)
