@@ -3,7 +3,7 @@ Uninitialised byte(s) found during client check request
    by 0x........: foo (varinfo3.c:54)
    by 0x........: main (varinfo3.c:66)
  Location 0x........ is 0 bytes inside static_global_def[1],
- declared at varinfo3.c:35, in frame #0 of thread 1
+ a global variable declared at varinfo3.c:35
 
 Uninitialised byte(s) found during client check request
    at 0x........: croak (varinfo3.c:29)
@@ -17,7 +17,7 @@ Uninitialised byte(s) found during client check request
    by 0x........: foo (varinfo3.c:56)
    by 0x........: main (varinfo3.c:66)
  Location 0x........ is 0 bytes inside static_global_undef[3],
- declared at varinfo3.c:37, in frame #0 of thread 1
+ a global variable declared at varinfo3.c:37
 
 Uninitialised byte(s) found during client check request
    at 0x........: croak (varinfo3.c:29)
